--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,20 @@
 <body>
 
   <%- include('./partials/nav.ejs') %>
+  <header>
+    <div class="w-full flex">
+      <img src="./images/fhome" alt="home page">
+    </div>
+  </header>
   
   <div><a href="/login"> Login</a>
     <a href="/signup"> Signup</a></div>
+
+  <main>
+    <div class="flex">
+
+    </div>
+  </main>
 
   <div class="flex flex-row mt-4 p-10 justify-between">
     <div class="basis-2/4 md:basis-1/4 mr-10 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
