--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('./partials/header') %>
 <body>
+    <%- include('./partials/nav') %>
     <form action="/login" method="POST">
         <div class="mb-6">
         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your email</label>
