--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,38 +3,40 @@
     <%- include('./partials/header') %>
 <body>
     <%- include('./partials/nav') %>
-    <form action="/login" method="POST">
-        <div class="mb-6">
-        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your email</label>
-        <input type="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="john@email.com" required="">
-        </div>
-        <div class="mb-6">
-        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your password</label>
-        <input type="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-        </div>
-        <div>
-            <% if (locals.messages.errors) { %>
-                <% messages.errors.forEach( el => { %>
-                    <div class="alert alert-danger"><%= el.msg %></div>
-                <% }) %>    
-                <% } %>
-                <% if (locals.messages.info) { %>
-                    <% messages.info.forEach( el => { %>
-                        <div class="alert alert-danger"><%= el.msg %></div>
-                    <% }) %>    
-                <% } %>
-        </div>
-        <div class="flex items-start mb-6">
-            <div class="flex items-center h-5">
-              <input id="terms" type="checkbox" value="" class="w-4 h-4 bg-gray-50 rounded border border-gray-300 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800" required>
+
+    <div class="py-12 mt-12 w-full flex flex-col items-center">
+        <form action="/signup" method="POST"  class="max-w-xl w-full text-gray-200 mt-4 px-8 md:px-0">
+            <div class="flex flex-col md:flex-row md:-mx-2 mb-6">
+                <label for="email" class="w-full mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your email</label>
+                <input type="email" name="email" class="w-full bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="john@email.com" required="">
             </div>
-            <label for="terms" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and conditions</a></label>
-            <p>Don't have an account <a href="/signup">signup</a></p>
-          </div>
-        <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
-    </form>
+
+            <div class="flex flex-col md:flex-row md:-mx-2 mb-6">
+                <label for="password" class="w-full mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your password</label>
+                <input type="password" name="password" class="w-full bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+            </div>
+            <div class="flex flex-col md:flex-row md:-mx-2 justify-center">
+                <% if (locals.messages.errors) { %>
+                    <% messages.errors.forEach( el => { %>
+                        <div class="text-rose-700 font-bold"><%= el.msg %></div>
+                    <% }) %>    
+                    <% } %>
+                    <% if (locals.messages.info) { %>
+                        <% messages.info.forEach( el => { %>
+                            <div class="text-rose-700 font-bold"><%= el.msg %></div>
+                        <% }) %>    
+                    <% } %>
+                <p class="mt-4 text-center">Don't have an account <a href="/signup" class="text-rose-700 hover:text-rose-800 font-bold">Sign up</a></p>
+            </div>
+            <div class="flex flex-col md:flex-row md:-mx-2">
+                <button type="submit" class="bg-blue-600 hover:bg-blue-800 text-sm mt-4 md:mx-2 rounded-lg py-2 px-4 block w-full focus:outline-none focus:shadow-outline">
+                    Login
+                </button>
+            </div>
+        </form>
+    </div>
+
+
     <%- include('./partials/footer.ejs') %>
 
-    <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-</body>
 </html>
