--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,16 +120,16 @@
         <p class="flex-col text-gray-300 uppercase font-bold text-center uppercase">modern & beautiful</p>
         <p class="flex-col text-blue-600 font-bold text-center text-2xl capitalize">our most popular adventures</p>
         
-        <div class="flex flex-col md:flex-row w-full justify-center items-center">
+        <div class="flex flex-col md:flex-row w-full justify-center items-center mt-8">
             <div class="px-4 py-3">
-                <div class="border-4 bg-white border border-gray-200 rounded-lg shadow-lg mt-8">
-                    <img src="images/feature-1.jpg" alt="feature">
+                <div class="border-4 bg-white border border-gray-200 rounded-lg shadow-lg">
+                    <img src="images/feature-1.jpg" width="100%" alt="feature">
                     <div class="text-gray-900 font-bold p-4">
                         <p>1 Review</p>
                         <p>Moscow Red city land</p>
                         <p><span class="text-red-500">$160</span> / per person</p>
                         <div class="border-gray-200 p-2 -mx-2">
-                            <div class="bg-gray-200 border rounded p-2"><i class="far fa-clock"></i> 5 Days <span class="border-r border-gray-400"></span> <i class="far fa-clock"></i> Birmingham</div>
+                            <div class="bg-gray-200 border rounded p-2"><i class="fa fa-clock-o" aria-hidden="true"></i> 5 Days <span class="border-r border-gray-400"></span> <i class="fa fa-map-o" aria-hidden="true"> </i> Birmingham</div>
                         </div>
                         <p class="text-gray-300 w-56 text-sm">Eius quae consequuntur culpa pariatur repellat dicta saepe repudiandae, blanditiis cum explicabo fuga minima.</p>
                         <button class="capitalize mt-2 font-bold border p-4 rounded-lg text-gray-900">see details</button>
