--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="sticky top-0 bg-gray-800 w-full">
   <div class="flex justify-between items-center p-4 px-8">
-      <div class="flex text-blue-400 text-2xl font-bold px-8"><a href="/">Travella</a>/div>
+      <div class="flex text-blue-400 text-2xl font-bold px-8"><a href="/">Travella</a></div>
       <div class="flex flex-row px-8 justify-center items-center">
           <a href="/" class="mr-4 font-bold text-gray-200 uppercase">Home</a>
           <a href="/tour" class="mr-4 font-bold text-gray-200 uppercase">Tour</a>
