--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
                             <div class="text-rose-700 font-bold"><%= el.msg %></div>
                         <% }) %>    
                     <% } %>
-                <p class="mt-4 text-center">Don't have an account <a href="/signup" class="text-rose-700 hover:text-rose-800 font-bold">Sign up</a></p>
+                <p class="mt-4 text-center text-gray-900">Don't have an account <a href="/signup" class="text-rose-700 hover:text-rose-800 font-bold">Sign up</a></p>
             </div>
             <div class="flex flex-col md:flex-row md:-mx-2">
                 <button type="submit" class="bg-blue-600 hover:bg-blue-800 text-sm mt-4 md:mx-2 rounded-lg py-2 px-4 block w-full focus:outline-none focus:shadow-outline">
