--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,7 +29,7 @@
                         <div class="text-rose-700 font-bold"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <p class="mt-4 text-center">Have an account <a href="/login" class="text-rose-700 font-bold">login</a></p>
+                <p class="mt-4 text-center text-gray-900">Have an account <a href="/login" class="text-rose-700 font-bold">login</a></p>
             </div>
             <div class="flex flex-col md:flex-row md:-mx-2">
                 <button type="submit" class="bg-blue-600 text-sm mt-4 md:mx-2 rounded-lg py-2 px-4 block w-full focus:outline-none focus:shadow-outline">
