--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,13 +23,16 @@
                 <label for="password" class="w-full mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Confirm password</label>
                 <input type="password" name="confirmPassword" class="w-full bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
             </div>
-            <div class="flex flex-col md:flex-row md:-mx-2 justify-center">
-                <% if (locals.messages.errors) { %>
-                    <% messages.errors.forEach( el => { %>
-                        <div class="text-rose-700 font-bold"><%= el.msg %></div>
-                    <% }) %>    
-                <% } %>
-                <p class="mt-4 text-center text-gray-900">Have an account <a href="/login" class="text-rose-700 font-bold">login</a></p>
+            <div class="flex flex-col  md:-mx-2 items-center justify-center">
+                <div>
+                    <% if (locals.messages.errors) { %>
+                        <% messages.errors.forEach( el => { %>
+                            <div class="text-rose-700 font-bold"><%= el.msg %></div>
+                        <% }) %>    
+                    <% } %>
+                </div>
+                
+                <div class="mt-4 text-center text-gray-900">Have an account <a href="/login" class="text-rose-700 font-bold">login</a></div>
             </div>
             <div class="flex flex-col md:flex-row md:-mx-2">
                 <button type="submit" class="bg-blue-600 text-sm mt-4 md:mx-2 rounded-lg py-2 px-4 block w-full focus:outline-none focus:shadow-outline">
