style auth pages

--- a/clients/src/pages/register/register.css
+++ b/clients/src/pages/register/register.css
@@ -1,11 +1,27 @@
-.lInput {
+.register{
+    width: 100;
+    min-height: 97vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.lRegister {
+    border-radius: 5px;
+    border: 1px solid gray;
     height: 30px;
     padding: 10px;
 }
-
+.rContainer {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
 .lButton {
     border: none;
-    padding: 10px 20px;
+    padding: 10px 20px;             
     background-color: #0071c2;
     color: white;
     font-weight: bold;
