--- a/client/src/components/reserve/reserve.css
+++ b/client/src/components/reserve/reserve.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* z-index: 2; */
+    z-index: 2;
 }
 
 .rContainer {
@@ -29,6 +29,7 @@
     align-items: center;
     gap: 50px;
     padding: 20px;
+    max-width: 600px;
 }
 
 .rInfo {
@@ -48,12 +49,13 @@
 .rPrice {
     font-weight: 500;
 }
-.rSelected {
+.rSelectedRooms {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
     font-size: 8px;
     color: gray;
+    text-align: center;
 }
 
 .room {
