--- a/admin/src/pages/login/login.scss
+++ b/admin/src/pages/login/login.scss
@@ -1,3 +1,41 @@
 .login{
-    
+    width: 100;
+    min-height: 97vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.lContainer {
+    display: flex;
+    max-width: 600px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+.lInput {
+    border-radius: 5px;
+    border: 1px solid gray;
+    height: 30px;
+    padding: 10px;
+}
+.lBtn {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+.lButton {
+    border: none;
+    padding: 10px 20px;
+    background-color: #0071c2;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.lButton:disabled {
+    background-color: #0071c28c;
+    cursor: not-allowed;
 }
