--- a/client/src/components/reserve/reserve.css
+++ b/client/src/components/reserve/reserve.css
@@ -32,7 +32,7 @@
     /* max-width: 600px; */
 }
 
-.rItemInfo {
+.rInfo {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -49,13 +49,13 @@
 .rPrice {
     font-weight: 500;
 }
-.rSelectedRooms {
+.rSelectRooms {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
     font-size: 8px;
     color: gray;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .room {
